--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>ARISTOS DESIGNS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="description" content="One stop solution for all your media assistance">
+  <meta name="keywords" content="aristos deisgns, aristos web developer, aristos social media management, best social media management company, branding, photography, media, sass, jquery">
+  <meta name="author" content="Shreyans Doshi">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -15,8 +15,8 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
-    <p>Global</p>
+    <img src="assets/img/logo.png" alt="Global" style="width:100px;">
+    <p>ARISTOS DESIGNS</p>
   </a>
   <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
@@ -27,14 +27,14 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
-            <p>Global</p>
+            <img src="assets/img/logo.png" alt="Global" style="width:70px;">
+            <p>ARISTOS DESIGNS</p>
           </a>
           <button class="header--cta cta">Hire Us</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
-        </header>
+        </header> 
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
@@ -61,16 +61,16 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3> SEO </h3>
+                  <p>Optimizing content with relevant keywords and keyword phrases to improve search engine rankings and attract organic traffic.</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Content Marketing</h3>
+                  <p>Involves creating and distributing valuable content to attract and retain an audience.</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Branding</h3>
+                  <p>Involves creating a unique identity through brand elements which help differentiate a company and connect with its audience.</p>
                 </a>
               </div>
             </div>
@@ -85,8 +85,8 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-victory.jpg" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">GSTV</p>
+                      <p class="slider--item-description">Gujarat Samachar news social media management.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
@@ -94,8 +94,8 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Plum Cosmetics</p>
+                      <p class="slider--item-description">Web Devekopment & SEO.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
@@ -103,8 +103,8 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Purplle </p>
+                      <p class="slider--item-description">Web Development & SEO.</p>
                     </a>
                   </li>
                 </ul>
@@ -131,8 +131,8 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
-                <a href="#0">Career
+                <h2>We<br>believe in<br>quality<br></h2>
+                <a href="#0">Connect
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -145,13 +145,13 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Plan</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>Execute</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Deploy</h3>
                 </a>
               </div>
             </div>
@@ -178,7 +178,7 @@
             <div class="hire">
               <h2>You want us to do</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request">
+              <form class="work-request" action="https://formspree.io/f/xldjdroy" method="post" >
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
