--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="hire">
               <h2>You want us to do</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request" action="https://formspree.io/f/xldjdroy" method="post" >
+              <form class="work-request" action="mailto:aristosdesignsbusiness@gmail.com" method="post" >
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
