--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             <div class="hire">
               <h2>You want us to do</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request" action="mailto:aristosdesignsbusiness@gmail.com" method="post" >
-                <div class="work-request--options">
+              <form class="work-request" action="https://formspree.io/f/xldjdroy" method="post" >
+                <!--<div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
                     <label for="opt-1">
@@ -244,15 +244,19 @@
                       Marketing
                     </label>
                   </span>
-                </div>
+                </div>-->
                 <div class="work-request--information">
                   <div class="information-name">
                     <input id="name" type="text" spellcheck="false">
                     <label for="name">Name</label>
                   </div>
                   <div class="information-email">
-                    <input id="email" type="email" spellcheck="false">
+                    <input id="email" type="email" spellcheck="true">
                     <label for="email">Email</label>
+                  </div>
+                   <div class="information-name">
+                    <input id="text" type="text" spellcheck="false">
+                    <label for="name">Message</label>
                   </div>
                 </div>
                 <input type="submit" value="Send Request">
