--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="aristos deisgns, aristos web developer, aristos social media management, best social media management company, branding, photography, media, sass, jquery">
   <meta name="author" content="Shreyans Doshi">
   <link rel="stylesheet" href="assets/css/main.css">
+  <script src="https://kit.fontawesome.com/e5dcddfaab.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
