--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>What we can do?</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form action="https://formspree.io/f/xldjdroy" method="POST" >
-                <!--<div class="work-request--options">
+              <form class="work-request" action="https://formspree.io/f/xldjdroy" method="POST" >
+                <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
                     <label for="opt-1">
@@ -245,8 +245,9 @@
                       Marketing
                     </label>
                   </span>
-                </div>-->
-                <div class="work-request--information">
+                </div>
+                <i class="fa-brands fa-instagram"><a href="www.instagram.com/aristos.designs">INSTAGRAM</a></i>
+                <!--div class="work-request--information">
                   <div class="information-name">
                     <input id="name" type="text" spellcheck="false">
                     <label for="name">Name</label>
@@ -260,7 +261,7 @@
                     <label for="name">Message</label>
                   </div>
                 </div>
-                <input type="submit" value="Send Request">
+                <input type="submit" value="Send Request"-->
               </form>
             </div>
           </li>
@@ -276,6 +277,7 @@
     <li>Hire us</li>
   </ul>
 </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
