--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </label>
                   </span>
                 </div>
-                <i class="fa-brands fa-instagram"><a href="https://www.instagram.com/aristos.designs/#">INSTAGRAM</a></i>
+                <i class="fa-brands fa-instagram" style="width: 500px; height: 500px;" ><a href="https://www.instagram.com/aristos.designs/#">INSTAGRAM</a></i>
                 <!--div class="work-request--information">
                   <div class="information-name">
                     <input id="name" type="text" spellcheck="false">
