--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Aristos Designs</title>
+    <meta name="description" content="Your one stop solution to all branding needs.">
     <meta name="description" content="Aristos Designs, AristosDesigns, Web Development">
     <meta name="author" content="Shreyans Doshi">
 
