--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script defer src="js/fontawesome/all.min.js"></script>
+    <script>document.addEventListener("contextmenu", (event) => {
+    event.preventDefault();});</script>
 
     <!-- favicons
     ================================================== -->
