--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <h4 class="h6">Where to Find Us</h4>
         
                         <h6>
-                        Mumbai, India<br>
+                        Mumbai & Ahmedabad, India<br>
                         <a href="mailto:aristosdesignsbusiness@gmail.com">Send your query</a>
                         </h6>
                     </div>
