--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </h1>
 
                 <p class="lead" data-aos="fade-up">
-                    We provide the best service for your Branding, Social Media management, SEO, E commerce marketing, App development, UI/UX research, Front end Development, Illustrations, etc.
+                    Our team works the best to provide service for your Branding, Social Media management, SEO, E commerce marketing, App development, UI/UX research, Front end Development, Illustrations, etc.
                 </p>
             </div>
 
@@ -243,10 +243,7 @@
                 <span class="service-icon service-icon--research"></span>
                 <h3 class="item-title">UX Research</h3>
                 <p>
-                Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
-                Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
-                cum numquam repudiandae. Beatae eum quae. Ut ex unde rem quod 
-                ipsum consequatur. blanditiis temporibus pariatur voluptatibus molestiae.
+                At Aristos Designs, UX research is the foundation of creating meaningful and user-centric brand experiences. By deeply understanding user behaviors, needs, and preferences, we uncover insights that drive intuitive design solutions. Our research process involves methods like usability testing, user interviews, and market analysis to ensure every interaction aligns with your brand’s goals. 
                 </p>
             </div>
             <div class="column item item-service" data-aos="fade-up">
