--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="row h-text-center">
             <div class="column">
                 <h6 class="s-contact__email">
-                    <a href="mailto:aristosdesignsbusiness@gmail.com">hello AristosDesigns</a>
+                    <a href="mailto:aristosdesignsbusiness@gmail.com">SEND AN EMAIL</a>
                 </h6>
             </div>
         </div>
